k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jigmjugm-deployment
  namespace: jigmjugm-ns
  labels:
    app: jigmjugm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jigmjugm
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: jigmjugm
    spec:
      containers:
        - name: jigmjugm
          image: /jigmjugm:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 5
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
